--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p id="cards-el">Cards: </p>
     <p id="sum-el">Sum: </p>
     <div class="buttons">
-    <button id="play-btn" onclick="startGame()">START GAME</button>
+    <button id="play-btn" onclick="startGame()">NEW GAME</button>
     <button id="card-btn" onclick="newCard()">NEW CARD</button>
     </div>
     <p id="player-el"></p>
