--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Blackjack</h1>
     <p id="message-el">Want to play a round?</p>
     <p id="cards-el">Cards: </p>
-    <p id="sum-el">Sum: </p>
+    <p id="sum-el">Total: </p>
     <div class="buttons">
     <button id="play-btn" onclick="startGame()">NEW GAME</button>
     <button id="card-btn" onclick="newCard()">NEW CARD</button>
